[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/actor_passive/gem_small/gem_jade.png" type="Texture" id=1]
[ext_resource path="res://assets/prototype/arrow_yellow.png" type="Texture" id=2]
[ext_resource path="res://camp_select/camp_select.gd" type="Script" id=3]

[node name="camp_select" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -31.9999
margin_bottom = -968.0
rect_min_size = Vector2( 836, 600 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mc" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 840.0
margin_bottom = 604.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pc" type="PanelContainer" parent="mc"]
margin_left = 32.0
margin_top = 32.0
margin_right = 804.0
margin_bottom = 568.0
rect_min_size = Vector2( 772, 536 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="mc/pc"]
margin_left = 7.0
margin_top = 7.0
margin_right = 765.0
margin_bottom = 529.0

[node name="label_gem_type" type="Label" parent="mc/pc/vbox"]
margin_top = 61.0
margin_right = 758.0
margin_bottom = 75.0
size_flags_vertical = 6
text = "GEM_STONE"
align = 1

[node name="hbox_gem_type" type="HBoxContainer" parent="mc/pc/vbox"]
margin_top = 158.0
margin_right = 758.0
margin_bottom = 258.0
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_type_left" type="TextureButton" parent="mc/pc/vbox/hbox_gem_type"]
margin_left = 42.0
margin_right = 207.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
texture_normal = ExtResource( 2 )

[node name="texture_gem_type" type="TextureRect" parent="mc/pc/vbox/hbox_gem_type"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 100.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
stretch_mode = 4

[node name="button_type_right" type="TextureButton" parent="mc/pc/vbox/hbox_gem_type"]
margin_left = 550.0
margin_right = 715.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
texture_normal = ExtResource( 2 )

[node name="hbox_gem_grade" type="HBoxContainer" parent="mc/pc/vbox"]
margin_top = 299.0
margin_right = 758.0
margin_bottom = 399.0
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_grade_left" type="TextureButton" parent="mc/pc/vbox/hbox_gem_grade"]
margin_left = 42.0
margin_right = 207.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
texture_normal = ExtResource( 2 )

[node name="label_gem_grade" type="Label" parent="mc/pc/vbox/hbox_gem_grade"]
margin_left = 254.0
margin_top = 43.0
margin_right = 504.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "GEM_STONE_GRADE"
align = 1

[node name="button_grade_right" type="TextureButton" parent="mc/pc/vbox/hbox_gem_grade"]
margin_left = 550.0
margin_right = 715.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
texture_normal = ExtResource( 2 )

[node name="button_start_field_camp" type="Button" parent="mc/pc/vbox"]
margin_top = 422.0
margin_right = 758.0
margin_bottom = 522.0
rect_min_size = Vector2( 758, 100 )
text = "START"
